--- a/boardconsulting.html
+++ b/boardconsulting.html
@@ -121,7 +121,7 @@
 		
 		<!-- Image -->
 		<figure class="image-container image-container--gutters reveal">
-			<img class="cover" src="assets/img/06_about_us.jpg" alt="" />
+			<img class="cover" src="assets/images/board1.jpg" alt="" />
 		</figure>
 		<!-- /Image -->
 		
@@ -142,14 +142,11 @@
 		    <div class="slider-article swiper-container">
                 <div class="swiper-wrapper">
 			        <div class="swiper-slide">
-						<div class="cover-slider" data-bg="assets/img/08_open_menu.jpg"></div>
+						<div class="cover-slider" data-bg="assets/images/board1.jpg"></div>
 					</div>
 			        <div class="swiper-slide">
-						<div class="cover-slider" data-bg="assets/img/9_news.jpg"></div>
-					</div>
-			        <div class="swiper-slide">
-						<div class="cover-slider" data-bg="assets/img/06_about_us.jpg"></div>
-					</div>
+						<div class="cover-slider" data-bg="assets/images/board2.jpg"></div>
+					</div>  
 		        </div>
 			</div>
 
