--- a/traininganddevelop.html
+++ b/traininganddevelop.html
@@ -121,7 +121,7 @@
 		
 		<!-- Image -->
 		<figure class="image-container image-container--gutters reveal">
-			<img class="cover" src="assets/img/06_about_us.jpg" alt="" />
+			<img class="cover" src="assets/images/training1.jpg" alt="" />
 		</figure>
 		<!-- /Image -->
 		
@@ -147,13 +147,10 @@
 		    <div class="slider-article swiper-container">
                 <div class="swiper-wrapper">
 			        <div class="swiper-slide">
-						<div class="cover-slider" data-bg="assets/img/08_open_menu.jpg"></div>
+						<div class="cover-slider" data-bg="assets/images/training1.jpg"></div>
 					</div>
 			        <div class="swiper-slide">
-						<div class="cover-slider" data-bg="assets/img/9_news.jpg"></div>
-					</div>
-			        <div class="swiper-slide">
-						<div class="cover-slider" data-bg="assets/img/06_about_us.jpg"></div>
+						<div class="cover-slider" data-bg="assets/images/training2.jpg"></div>
 					</div>
 		        </div>
 			</div>
